# CIS-7000-Final-Project

./: .gitignore  PLAN.md  README.md  aurora_finetuning_methodology.md  aurora_notes.md  pyproject.toml
docker/: Dockerfile
docs/: aurora_regional_embeddings.md  baseline_plan.md  data_pipeline.md  data_selection.md  finetuning_plan.md  preprocessing_and_splits.md
k8s/: aurora-data-pvc.yaml  aurora-data-shell.yaml  aurora-download-job.yaml  aurora-finetune-job.yaml  aurora-finetune-stage1-job.yaml  aurora-inference-job.yaml  aurora-interactive-cpu-pod.yaml  aurora-interactive-era5-pod.yaml  aurora-interactive-pod.yaml  aurora-test-cpu-job.yaml  aurora-test-job.yaml  compute-norm-stats-job.yaml  copy-era5-data-job.yaml  dataloader-benchmark-pod.yaml  dataloader-test-pod.yaml  embedding-extraction-job.yaml  embedding-results-pvc.yaml  era5-2025-download-job.yaml  era5-2025-pretrain-pvc.yaml  era5-rechunked-pvc.yaml  era5-summer-data-many-connect-pvc.yaml  era5-summer-download-job.yaml  era5-summer-soil-moisture-pvc.yaml  inspect-chunks-job.yaml  per-timestep-dataloader-bench-job.yaml  rechunk-job.yaml  rechunk-nvme-test.yaml  rechunk-python-test.yaml  split-era5-to-per-timestep-job.yaml  verify-rechunked-job.yaml
notebooks/: embedding_comparison.ipynb  era5_download_crop.ipynb  era5_predictions.ipynb  era5_predictions_script.py
scripts/: benchmark_dataloader.py  check_rechunked_sizes.sh  cleanup_corrupt_rechunked.sh  compute_norm_stats.py  docker-build-push.sh  download_era5.py  extract_embeddings_tsne.py  extract_surface_latents.py  k8s-finetune.sh  k8s-inference.sh  (+18 more)
(+10 files in other folders)
