[project]
name = "cis7000-aurora"
version = "0.1.0"
description = "Aurora atmospheric foundation model — inference and fine-tuning"
requires-python = ">=3.10"

dependencies = [
    "microsoft-aurora",
    "torch",
    "numpy",
    "xarray",
    "netcdf4",
    "cdsapi>=0.7.7",
    "matplotlib",
    "psutil",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ipykernel",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
